using bean
