# src/main/java/org/openapitools/api/ApiApi.java
@@ -1,12 +1,13 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.0.0).
- * https://openapi-generator.tech
- * Do not edit the class manually.
+/*
+  NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.0.0).
+  https://openapi-generator.tech
+  Do not edit the class manually.
  */
 package org.openapitools.api;
 
 import org.openapitools.model.Person;
 import io.swagger.annotations.*;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -22,10 +23,12 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-06-21T17:38:45.388006+03:00[Europe/Minsk]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-06-22T15:51:34.345334700+03:00[Europe/Minsk]")
 @Validated
 @Api(value = "api", description = "the api API")
 public interface ApiApi {
+
+    Person person = new AnnotationConfigApplicationContext(Person.class).getBean(Person.class);
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
@@ -37,19 +40,21 @@ public interface ApiApi {
      * @param name Имя человека (required)
      * @return OK (status code 200)
      */
-    @ApiOperation(value = "Добавляет человека в базу данных", nickname = "addPerson", notes = "", response = Person.class, tags={ "База данных с людьми", })
+    @ApiOperation(value = "Добавляет человека в базу данных", nickname = "addPerson", notes = "", response = Person.class, responseContainer = "List", tags={ "База данных с людьми", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = Person.class) })
+        @ApiResponse(code = 200, message = "OK", response = Person.class, responseContainer = "List") })
     @PostMapping(
         value = "/api/person",
         produces = { "application/json;charset=UTF-8" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<Person> addPerson(@ApiParam(value = "Имя человека" ,required=true )  @Valid @RequestBody String name) {
+    default ResponseEntity<List<Person>> addPerson(@ApiParam(value = "Имя человека" ,required=true )  @Valid @RequestBody String name) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json;charset=UTF-8"))) {
-                    String exampleString = "{ \"name\" : " + name + ", \"id\" : 0 }";
+                    person.setId(1);
+                    person.setName(name);
+                    String exampleString = person.toString();
                     ApiUtil.setExampleResponse(request, "application/json;charset=UTF-8", exampleString);
                     break;
                 }
@@ -77,7 +82,7 @@ public interface ApiApi {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json;charset=UTF-8"))) {
-                    String exampleString = "{ \"name\" : \"name\", \"id\" : 0 }";
+                    String exampleString = person.toString();
                     ApiUtil.setExampleResponse(request, "application/json;charset=UTF-8", exampleString);
                     break;
                 }
