# src/main/java/org/openapitools/api/ApiUtil.java
@@ -1,6 +1,5 @@
 package org.openapitools.api;
 
-import org.openapitools.model.Person;
 import org.springframework.web.context.request.NativeWebRequest;
 
 import javax.servlet.http.HttpServletResponse;
@@ -8,13 +7,12 @@ import java.io.IOException;
 
 public class ApiUtil {
     public static void setExampleResponse(NativeWebRequest req, String contentType, String example) {
-        Person person = new Person();
         try {
             HttpServletResponse res = req.getNativeResponse(HttpServletResponse.class);
+            assert res != null;
             res.setCharacterEncoding("UTF-8");
             res.addHeader("Content-Type", contentType);
             res.getWriter().print(example);
-            person.setName(example);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
